[build-system]
requires      = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypt_keeper"
version = "0.0.1"
description = "Startup Client for a Crypt Keeper Backend"
readme = "README.md"
authors = [{ name = "Huth S0lo", email = "john@themorphium.io" }]
license = "GPL-3.0-or-later"
classifiers = [
  "Development Status :: 1 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["python", "password", "security", "key server"]

dependencies = [
  "pycryptodome=3.20.0",
  "httpx>=1.3.9"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/HSCryptKeeper/CryptKeeperClient"

[project.scripts]
realpython = "reader.__main__:main"